# STM32F103xxUART

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE.md  Makefile  README.md  STM32F10xx_UART Default.launch  STM32F1xxUART.ioc  STM32f1xxUART.code-workspace  STM32f1xxUART.txt
Application/: Applications.cmake  defines.mk
Application/free_rtos/uart_ll_dma_echo/: CMakeLists.txt
Application/free_rtos/uart_ll_dma_echo/Inc/: FreeRTOSConfig.h  board_config.h
Application/free_rtos/uart_ll_dma_echo/Src/: freertos.c  main.c
Application/free_rtos/uart_ll_dma_echo/Src/Backup/: main.c.bak
Application/free_rtos/uart_rtos_echo/: CMakeLists.txt
Application/free_rtos/uart_rtos_echo/Inc/: board_config.h  stm32f1xx_it.h
Application/free_rtos/uart_rtos_echo/Inc/Backup/: FreeRTOSConfig.h.bak
Application/free_rtos/uart_rtos_echo/Src/: freertos.c  main.c
Application/free_rtos/uart_rtos_echo/Src/Backup/: freertos.c.bak  stm32f1xx_it.c.bak
Application/interrupt/uart_hal_echo/: CMakeLists.txt
Application/interrupt/uart_hal_echo/Inc/: board_config.h
Application/interrupt/uart_hal_echo/Src/: main.c
Application/interrupt/uart_hal_tx/: CMakeLists.txt
Application/interrupt/uart_hal_tx/Inc/: board_config.h
Application/interrupt/uart_hal_tx/Src/: main.c  usart.c
Application/interrupt/uart_ll_dma_echo/: CMakeLists.txt
Application/interrupt/uart_ll_dma_echo/Inc/: board_config.h
Application/interrupt/uart_ll_dma_echo/Src/: gpio.c  main.c
Application/interrupt/uart_ll_dma_tx/: CMakeLists.txt
Application/interrupt/uart_ll_dma_tx/Src/: main.c
Application/interrupt/uart_ll_echo/: CMakeLists.txt
Application/interrupt/uart_ll_echo/Src/: main.c
Application/interrupt/uart_ll_tx/: CMakeLists.txt
Application/simple_os/uart_hal_echo/: CMakeLists.txt
Application/simple_os/uart_hal_echo/Inc/: board_config.h
Application/simple_os/uart_hal_echo/Src/: gpio.c  main.c  stm32f1xx_it.c
Application/simple_os/uart_hal_tx/: CMakeLists.txt
Application/simple_os/uart_hal_tx/Inc/: board_config.h
Application/simple_os/uart_hal_tx/Src/: main.c
Application/simple_os/uart_ll_dma_echo/: CMakeLists.txt
Application/simple_os/uart_ll_dma_echo/Inc/: board_config.h
Application/simple_os/uart_ll_dma_echo/Src/: main.c  stm32f1xx_it.c
Application/simple_os/uart_ll_dma_tx/: CMakeLists.txt
Application/simple_os/uart_ll_dma_tx/Inc/: board_config.h
Application/simple_os/uart_ll_dma_tx/Src/: main.c
Application/simple_os/uart_ll_echo/: CMakeLists.txt
Application/simple_os/uart_ll_echo/Inc/: board_config.h
Application/simple_os/uart_ll_echo/Src/: main.c
Application/simple_os/uart_ll_tx/: CMakeLists.txt
Application/simple_os/uart_ll_tx/Inc/: board_config.h
Application/simple_os/uart_ll_tx/Src/: main.c  usart.c
Application/uart_hal_echo/: CMakeLists.txt  Makefile
Application/uart_hal_echo/Inc/: board_config.h
Application/uart_hal_echo/Src/: main.c  stm32f1xx_it.c
Application/uart_hal_tx/: CMakeLists.txt  Makefile
Application/uart_hal_tx/Inc/: board_config.h
Application/uart_hal_tx/Src/: main.c
Application/uart_ll_dma_echo/: CMakeLists.txt  Makefile
Application/uart_ll_dma_echo/Inc/: board_config.h
Application/uart_ll_dma_echo/Src/: main.c
Application/uart_ll_dma_echo_sos/: CMakeLists.txt
Application/uart_ll_dma_echo_sos/Src/: main.c
Application/uart_ll_dma_tx/: CMakeLists.txt  Makefile
Application/uart_ll_dma_tx/Inc/: board_config.h
Application/uart_ll_dma_tx/Src/: main.c
Application/uart_ll_echo/: CMakeLists.txt  Makefile
Application/uart_ll_echo/Inc/: board_config.h
Application/uart_ll_echo/Src/: main.c
Application/uart_ll_echo_sos/: CMakeLists.txt  Makefile
Application/uart_ll_echo_sos/Src/: main.c
Application/uart_ll_tx/: CMakeLists.txt  Makefile
Application/uart_ll_tx/Inc/: board_config.h
Application/uart_ll_tx/Src/: main.c
Config/hal/: board_config.h
Config/ll/: board_config.h
Config/ll_dma/: board_config.h
ConfigTemplates/hal/: board_config.h
ConfigTemplates/ll/: board_config.h
ConfigTemplates/ll_dma/: board_config.h
Modules/buffer/: ring_buffer.c  ring_buffer.h
Modules/serial/: README.md
Modules/serial/uart/: uart.h
Modules/serial/uart/hal/: README.md  uart.c  uart_conf.h
Modules/serial/uart/ll/: uart_ll.c  uart_ll_conf.h
Modules/serial/uart/ll_dma/: uart_ll_dma.c  uart_ll_dma_conf.h
Modules/serial/uart/rtos/: uart_rtos.c  uart_rtos_conf.h
Modules/serial_debug/: debug.c  debug.h
Modules/utils/: utils.h
Tools/: calc_brr.py  main.py  requirements.txt
cmake/: gcc-arm-none-eabi.cmake  gcc-arm.cmake  st_hal.cmake  st_ll.cmake  stm32f103cbtx.cmake
images/: uart_test_results.txt
